# signal-notifier

./: .env.example  .gitignore  DEPLOY.md  README.md  opencode.json  requirements.txt  urls.yaml
.github/workflows/: deploy.yml
app/: auth.py  database.py  logging_setup.py  main.py  state.py  utils.py
app/config/: settings.py
app/models/: schemas.py
app/routes/: analyses.py  auth.py  charts.py  cpp_engine.py  dashboard.py  notifications.py  settings.py  strategy.py  trigger.py
app/services/: browser.py  gemini.py  scheduler.py  telegram.py
frontend/: UI_UX_SPEC.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: analyses.ts  auth.ts  charts.ts  client.ts  cpp-engine.ts  dashboard.ts  notifications.ts  settings.ts  strategy.ts
frontend/src/components/layout/: AppShell.vue  AppSidebar.vue  AppTopbar.vue
frontend/src/components/ui/: AppIcon.vue  AppLoading.vue  AppToast.vue  BaseButton.vue  BaseChip.vue  BaseModal.vue  BaseToggle.vue  EmptyState.vue  PulseIndicator.vue  ScoreBar.vue  StatCard.vue  StatusPill.vue  Toast.vue
frontend/src/composables/: useCountdown.ts  useTimezone.ts  useToast.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  auth.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/types/: index.ts
frontend/src/views/: AnalysisDetailView.vue  ChartsView.vue  DashboardView.vue  EngineView.vue  HistoryView.vue  LoginView.vue  NotificationsView.vue  SettingsView.vue  StrategyView.vue
prompts/: strategy.md
scripts/: get_chat_id.py
trading-signal-engine/: CMakeLists.txt  PLAN.md  README.md  config.json
trading-signal-engine/src/: binance_rest_source.cpp  binance_rest_source.h  binance_websocket_source.cpp  binance_websocket_source.h  bollinger_squeeze_breakout.cpp  bollinger_squeeze_breakout.h  data_source.cpp  data_source.h  data_source_interface.h  main.cpp  signal_sender.cpp  signal_sender.h  strategy.cpp  strategy.h  strategy_interface.h  test_strategy.cpp  test_volume_profile_sr.cpp  volume_profile_sr.cpp  volume_profile_sr.h
trading-signal-engine/src/utils/: circular_buffer.h  json_helpers.h
